kubernetes_DevOps/kustum/base/pgAdmin_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80  # Change targetPort to match container port
      nodePort: 30080
  selector:
    app: pgadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80  # Ensure this matches the Service targetPort
