kubernetes_DevOps/kustum/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: rancher-secret
      hosts:
        - pgadmin.cluster.cloudns.be
        - fastapi.cluster.cloudns.be
  rules:
  - host: pgadmin.cluster.cloudns.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  - host: fastapi.cluster.cloudns.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 5000
